--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@
 
 :root {
   --bg-color: #081b29;
-  --main-color: #00abf0;
+  --main-color:#320692;
   --text-color: #333;
   --second-text-color: #555;
   --white-color: #fff;
-  --cover-color: linear-gradient(45deg, #00abf0, #006e9a);
+  --cover-color: linear-gradient(45deg, #320692, #d403aa);
   --pages-color: linear-gradient(90deg, #fff, #ddd);
-  --border: .125rem solid #00abf0;
+  --border: .125rem solid #320692;
   --box-shadow: 0 0 .6rem rgba(0, 0, 0, .2);
 }
 
@@ -712,7 +712,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color: #20694d;
+  background-color:#3e07b4;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -720,7 +720,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #5fa563;
+  background-color: #320692;
 }
 
 /* Style the container/contact section */
