--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 :root {
   --bg-color: #081b29;
-  --main-color:#320692;
+  --main-color: #320692;
   --text-color: #333;
   --second-text-color: #555;
   --white-color: #fff;
@@ -30,8 +30,7 @@ body{
   min-height: 100vh;
   background: var(--bg-color);
   color: var(--text-color);
-  /*
-  overflow: hidden;*/
+  overflow: hidden;
 }
 
 .wrapper{
@@ -39,7 +38,7 @@ body{
   width: 85rem;
   height: 44rem;
   padding: 0.3rem;
-  perspective: 200rem; 
+  perspective: 250rem; 
   animation: show-animate 1s forwards;
   
 }
@@ -101,6 +100,9 @@ body{
   display: flex;
   padding: .5rem;
 }
+
+
+
 
 /*navbar*/
 .navbar {
@@ -171,6 +173,7 @@ perspective: 250rem  }
   overflow: hidden;
   animation: typing 6s steps(10,end) infinite forwards; */
 }
+
 /*
 @keyframes typing {
   0%{
@@ -612,6 +615,43 @@ filter: blur(10px);
   cursor: pointer;
 }
 
+
+.back-profile{
+  position: absolute;
+  bottom: 1.2rem;
+  right: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: .3rem;
+  font-size: 1.1rem;
+  color: var(--main-color);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s;
+}
+.back-profile:hover{
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.back-profile p{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) scale(.5);
+  font-size: 1rem;
+  opacity: 0;
+  transition: .5s;
+}
+
+.back-profile:hover p{
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+  top: -1.8rem;
+}
+
 .contact_container{
   display: flex;
     width: 25rem;
@@ -712,7 +752,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color:#3e07b4;
+  background-color: #3e07b4;
   color: white;
   padding: 10px 20px;
   border: none;
